# cmake_workspace_sample

./: .gitignore  README.md
workspace/: smlWorkspaceVar.cmake
workspace/framework/module.m/: CMakeLists.txt  CollectFiles.cmake  gen_module_header.cmd
workspace/framework/module.m/src/: module_1_src.cpp
workspace/framework/moduleSrcHeader.m/: CollectFiles.cmake  smlModuleVar.cmake
workspaceSample/: CMakeLists.txt
workspaceSample/frameworkSample/: CMakeLists.txt  notes.txt  smlFrameworkFunction.cmake  smlFrameworkVar.cmake
workspaceSample/frameworkSample/moduleSample.m/: CMakeLists.txt  gen_module_header.cmd.txt  smlModuleFunction.cmake  smlModuleVar.cmake
workspace_cmake_starter_sample/: del_gened_code.cmd.txt  smlWorkspaceVar.cmake
workspace_cmake_starter_sample/frameworkSample/: gen_framework_header.cmd.txt
workspace_cmake_starter_sample/frameworkSample/moduleSample.m/: CMakeLists.txt  smlAddBoost.cmake  smlModuleFunction.cmake  smlModuleVar.cmake
workspace_directories_files_tree/framework/: gen_framework_header.cmd
workspace_directories_files_tree/framework/module.m/: smlModuleVar.cmake
workspace_directories_files_tree/framework/moduleSrcHeader.m/: gen_module_header.cmd
workspace_directories_files_tree/frameworkAgain/: gen_framework_header.cmd
